feat: add Model Y VIN decoding
