# docs/swagger.yaml
@@ -176,6 +176,8 @@ definitions:
       vin:
         example: 5YJSA1E26KF000000
         type: string
+      vin_details:
+        $ref: '#/definitions/dto.V1CarVINDetails'
     type: object
   dto.V1CarExterior:
     properties:
@@ -227,6 +229,46 @@ definitions:
       total_updates:
         example: 38
         type: integer
+    type: object
+  dto.V1CarVINDetails:
+    properties:
+      body_type:
+        example: MPV 5 DR / LHD
+        type: string
+      check_digit:
+        example: X
+        type: string
+      fuel_type:
+        example: Ternary System Li-ion battery
+        type: string
+      line_series:
+        example: Model Y
+        type: string
+      manufacturer:
+        example: Tesla China (Giga Shanghai)
+        type: string
+      motor_drive_unit:
+        example: Dual Motor Standard
+        type: string
+      plant:
+        example: Tesla China (Giga Shanghai)
+        type: string
+      production_year:
+        example: 2021
+        type: integer
+      restraint_system:
+        example: Type 2 Manual seatbelts with front Airbags, PODS, side Inflatable
+          restraints
+        type: string
+      sequence_number:
+        example: "000001"
+        type: string
+      wmi:
+        example: LRW
+        type: string
+      year_type:
+        example: calendar_year
+        type: string
     type: object
   dto.V1CarsData:
     properties:
